syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
  User user = 3;
}

message User {
  string id = 1;
  string email = 2;
  string createdAt = 3;
  string updatedAt = 4;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
  User user = 4;
}
